--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <body>
     <article>
       <h1>tech.kubis</h1>
-      <p>Under development, meanwhile please contact me at <a href="mailto:jakub.david.kubicek@gmail.com?subject=[tech.kubis] ...">jakub.david.kubicek@gmail.com</a>.</p>
+      <p>Under development, meanwhile please contact me at
+        <a href="mailto:jakub.david.kubicek@gmail.com?subject=[tech.kubis] ...">jakub.david.kubicek@gmail.com</a>.</p>
       <p>This website previously contained my exchange diary, you can find it in the gitlog.</p>
     </article>
   </body>
