Update to custom-domain e-mail address

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <article>
       <h1>tech.kubis</h1>
       <p>Under development, meanwhile please contact me at
-        <a href="mailto:jakub.david.kubicek@gmail.com?subject=[tech.kubis] ...">jakub.david.kubicek@gmail.com</a>.</p>
+        <a href="mailto:kubis@kubis.tech?subject=[tech.kubis] ...">kubis@kubis.tech</a>.</p>
       <p>This website previously contained my exchange diary,
         you can find it in the <a href="https://github.com/Kubo2/kubo2.github.io/commits/diary">gitlog</a>.</p>
     </article>
