--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <article>
       <h1>tech.kubis</h1>
-      <p>Under development, meanwhile please contact me at
+      <p>Under development &mdash; meanwhile please contact me at
         <a href="mailto:kubis@kubis.tech?subject=[tech.kubis] ...">kubis@kubis.tech</a>.</p>
       <p>This website previously contained my exchange diary,
         you can find it in the <a href="https://github.com/Kubo2/kubo2.github.io/commits/diary">gitlog</a>.</p>
