Write basic introduction

--- a/index.html
+++ b/index.html
@@ -7,10 +7,35 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yegor256/tacit@gh-pages/tacit-css-1.5.1.min.css">
   </head>
   <body>
-    <article>
+	<aside>(picture of myself)</aside>
+	<article>
       <h1>tech.kubis</h1>
       <p>Under development &mdash; meanwhile please contact me at
         <a href="mailto:kubis@kubis.tech?subject=[tech.kubis] ...">kubis@kubis.tech</a>.</p>
+		<article>
+			<h2>Who is this?</h2>
+			<p>
+				I am an independent software developer.<br>
+				I am not exactly a researcher, but I have this passion for understanding and learning about things. My current research interests are rather broad and loosely connected.
+			</p>
+			<ul type=square>
+				<li>Space and rocket science
+				<li>Language and Linguistics
+				<li>Dating and Social Dynamics
+				<li>The Science of Human Learning
+			</ul>
+			<p>
+				I focus on the practical applications of mine and others' ideas. Hit me up through e-mail at contact@kubis.tech if you'd like to work with me to help develop your ideas or put them into practice.
+			</p>
+		</article>
+		<article>
+			<h2>What is this?</h2>
+			<p>etc.
+			<blockquote>
+				The idea of a piece of code I wrote running around and living it's own life in the real world thrills me
+				<cite>Personal quote
+			</blockquote>
+		</article>
       <p>This website previously contained my exchange diary,
         you can find it in the <a href="https://github.com/Kubo2/kubo2.github.io/commits/diary">gitlog</a>.</p>
     </article>
