--- a/index.html
+++ b/index.html
@@ -39,5 +39,12 @@
       <p>This website previously contained my exchange diary,
         you can find it in the <a href="https://github.com/Kubo2/kubo2.github.io/commits/diary">gitlog</a>.</p>
     </article>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-37444056-3"></script>
+	<script>
+		window.dataLayer = window.dataLayer || []
+		function gtag() { dataLayer.push(arguments) }
+		gtag('js', new Date())
+		gtag('config', 'UA-37444056-3')
+	</script>
   </body>
 </html>
