--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
       <p>Under development &mdash; meanwhile please contact me at
         <a href="mailto:kubis@kubis.tech?subject=[tech.kubis] ...">kubis@kubis.tech</a>.</p>
 		<article>
+			<h2>Current projects</h2>
+			<ul>
+				<li><a href="https://studentspring.nicepage.io">Student Spring 2022</a>
+			</ul>
+		</article>
+		<article>
 			<h2>Who is this?</h2>
 			<p>
 				I am an independent software developer.<br>
