Replace deprecated type attr with list-style-type

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="mailto:kubis@kubis.tech?subject=[tech.kubis] ...">kubis@kubis.tech</a>.</p>
 		<article>
 			<h2>Current projects</h2>
-			<ul>
+			<ul style='list-style-type: "\BB\20"'>
 				<li><a href="https://studentspring.nicepage.io">Student Spring 2022</a>
 			</ul>
 		</article>
@@ -24,7 +24,7 @@
 				I am an independent software developer.<br>
 				I am not exactly a researcher, but I have this passion for understanding and learning about things. My current research interests are rather broad and loosely connected.
 			</p>
-			<ul type=square>
+			<ul style="list-style-type: square">
 				<li>Space and rocket science
 				<li>Language and Linguistics
 				<li>Dating and Social Dynamics
